--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~43.0.0",
+    "axios": "^0.24.0",
+    "expo": "^43.0.2",
     "expo-status-bar": "~1.1.0",
+    "location": "^0.0.1",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
+    "react-native-stack": "^1.0.0-alpha11",
+    "react-native-tabs": "^1.0.9",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
